--- a/src/pages/links/index.astro
+++ b/src/pages/links/index.astro
@@ -45,7 +45,7 @@ import { Button } from "@/components/ui/button";
 
       <div class="text-center pt-m">
         <div class="text-base text-left font-medium lg:text-lg">
-          <p>My Affilicate Links</p>
+          <p>My Referral Links</p>
         </div>
         <a href='https://hetzner.cloud/?ref=MwAWq1Jt8TPU' target="_blank" rel="noopener noreferrer" class='no-underline block mx-auto mt-xs w-[95%]'> <!--  md:w-[60%] lg:w-[50%] xl:w-[35%] -->
           <Button className='w-full'>
